--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -230,6 +230,7 @@
 
     &-icon {
       display: none;
+      color: var(--primary);
 
       @media (max-width: breakpoints.$xsm) {
         display: block;
@@ -416,6 +417,7 @@
       @media (max-width: breakpoints.$xsm) {
         flex: 1;
         gap: 0;
+        padding-left: 20px;
       }
 
       &-focused {
@@ -556,6 +558,11 @@
           border: none;
           padding: 0 25px;
           font-size: 16px;
+
+          @media (max-width: breakpoints.$xsm) {
+            padding: 0 12px;
+            font-size: 13px;
+          }
           font-weight: 500;
           cursor: pointer;
           white-space: nowrap;
